--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,7 @@ cython_debug/
 # static files generated from Django application using `collectstatic`
 media
 static
+
+experiments/image_classification/~
+result
+experiments/image_classification/result
