--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,11 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*/*/.DS_Store
+*/*/*/.DS_Store
+*/*/*/*/.DS_Store
+*/*/*/*/*/.DS_Store
+experiments/image_classification/log/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
