--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,9 @@ result
 experiments/image_classification/result
 jax_privacy/log/
 experiments/image_classification/configs/
+experiments/imdb/data
+experiments/imdb/log
+experiments/imdb/*.sh
+experiments/image_classification/*.sh
+experiments/jax-gcn/
+
