--- a/.gitignore
+++ b/.gitignore
@@ -151,7 +151,7 @@ experiments/image_classification/~
 result
 experiments/image_classification/result
 jax_privacy/log/
-experiments/image_classification/configs/
+# experiments/image_classification/configs/
 experiments/imdb/data
 experiments/imdb/log
 experiments/imdb/*.sh
